--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                         <hr>
                         <div class="button">
-                            <a class="btn" href="#">Click me.....</a>
+                            <a class="btn" href="pages/chapter.html">Click me.....</a>
                         </div>
                     </div>
                     <div class="contentbox">
